       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. Document.cookie= does not restrict the cookie by path and domain


Revision History:
 4-Feb-2003
Acknowledgements:
    Thanks to Daniel Sheppard and Krystyna Polomski for identifying a problem with meta refresh tags.

Additions:
    1. Added support for <iframe> tag. IFrames work just like regular frames, except that they are embedded in a response
       without a <frameset> tag. IFrame support is controlled by the ClientProperties.iframeSupported property.
    2. ServletUnit now handles https requests, marking them as "secure."

Problems fixed:
    1. Quotes in refresh URL meta tags are now recognized and stripped.

13-Jan-2003
    Notes: upgraded NekoHTML to 0.7.2 which no longer generates superfluous <form> tags.

10-Jan-2003
    Thanks to Alex Beggs for noting the mishandling of non-JavaScript scripts and providing a test case.

Problems fixed:
    1. Scripts marked as something besides JavaScript are now ignored.

 9-Jan-2003
 Acknowledgements:
    Thanks to James Howe for noting the mispelling of the getElementById method

Problems fixed:
    1. Corrected spelling of getElementById

 3-Jan-2003
Additions:
    1. ServletRunner.shutDown() will invoke the destroy() methods of any servlets which have been invoked
       through that servlet runner.
    2. ServletUnit now supports HttpServletRequest.getHeaderNames

30-Dec-2002
Additions:
    1. Added support for document.getElementByID
    2. all HTML elements with id attributes are now accessible

27-Dec-2002
Additions:
    1. Added getFragmentIdentifier() to WebRequestSource (parent of WebLink, WebForm, and WebImage)

26-Dec-2002
Additions:
    1. WebResponse and TableCell now support the getElementWithID method, which returns any supported HTMLElement, given its ID.